# deep-telemetry-trigger

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: model.yaml
models/: lstm_autoencoder.pth  model.onnx  scaler.pkl
monitoring/: prometheus.yml
scripts/: test_api.py  test_request.py
src/: evaluate.py  train.py
src/api/: main.py  schema.py
src/data/: dataset.py  loader.py  preprocessor.py
src/models/: __init__.py  export_onnx.py  lstm_autoencoder.py
