[project]
name = "anomaly-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.124.4",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "onnxscript>=0.5.7",
    "pandas>=2.3.3",
    "prometheus-client>=0.23.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "uvicorn>=0.38.0",
]
